--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -1,19 +1,22 @@
+$background: #dadada;
+$primary: #353535;
+$accent: #d14040;
+
 html,
 body {
   margin: 0px;
   height: 100%;
   width: 100%;
   font-family: "Montserrat", sans-serif;
-  background-color: #dadada;
+  background-color: $background;
 }
-
 .banner {
   background-image: url("/img/banner.svg");
   background-size: 100%;
   background-repeat: no-repeat;
   position: static;
   color: white;
-  background-color: #353535;
+  background-color: $primary;
   text-transform: uppercase;
   top: 0;
   left: 0;
@@ -23,30 +26,29 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.banner h1 {
-  font-weight: 500;
-  font-size: 2em;
-}
-.banner .download {
-  display: block;
-  width: 20%;
-  height: 10%;
-  text-transform: inherit;
-  border: none;
-  font-size: medium;
-  font-weight: 500;
-  background-color: #d14040;
-  color: #353537;
-}
-.banner .download:hover {
-  transform: scale(1.1);
-  transition: ease 1s;
-}
 
+  h1 {
+    font-weight: 500;
+    font-size: 2em;
+  }
+
+  .download {
+    display: block;
+    width: 20%;
+    height: 10%;
+    text-transform: inherit;
+    border: none;
+    font-size: medium;
+    font-weight: 500;
+    background-color: $accent;
+    color: #353537;
+    &:hover {
+      transform: scale(1.1);
+      transition: ease 1s;
+    }
+  }
+}
 section.features {
   display: flex;
   flex-direction: column;
 }
-
-/*# sourceMappingURL=index.css.map */
