--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -8,6 +8,7 @@ body {
   height: 100%;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  font-size: 1em;
   background-color: $background;
 }
 .banner {
@@ -31,24 +32,61 @@ body {
     font-weight: 500;
     font-size: 2em;
   }
+}
+h1 {
+  text-align: center;
+}
 
-  .download {
-    display: block;
-    width: 20%;
-    height: 10%;
-    text-transform: inherit;
-    border: none;
-    font-size: medium;
-    font-weight: 500;
-    background-color: $accent;
-    color: #353537;
-    &:hover {
-      transform: scale(1.1);
-      transition: ease 1s;
-    }
+button.download {
+  display: block;
+  width: 20%;
+  height: 10%;
+  text-transform: inherit;
+  border: none;
+  margin: 0 auto;
+  font-size: medium;
+  font-weight: 500;
+  background-color: $accent;
+  color: #353537;
+  &:hover {
+    transform: scale(1.1);
+    transition: ease 1s;
   }
 }
+
 section.features {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  > article {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    max-height: 30%;
+    margin: 5% auto;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    img {
+      margin-right: 5%;
+      width: 128px;
+      height: 128px;
+      @media screen and (min-width: 1224px) {
+        width: 256px;
+        height: 256px;
+      }
+      @media screen and (min-width : 320px) and (max-width : 480px) {
+        width: 64px;
+        height: 64px;
+      }
+    }
+  }
+}
+
+section.download {
+  background-color: $primary;
+  padding: 5%;
 }
