--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,6 +1,6 @@
 <div class="banner">
     <h1>BIQ-Cat OS - OS of the future</h1>
-    <button class="download">Download now</button>
+    <a href="/downloads"><button class="download">Download now</button></a>
 </div>
 <h1>Featurs</h1>
 <section class="features">
@@ -39,6 +39,11 @@
         </div>
     </article>
 </section>
+<div>
+    <h1>All BIQ-Cat Software INCLUDED</h1>
+    <p>You can find <b>all</b> your favourite apps in this operating system</p>
+    <a href="/about">Learn more about BIQ-Cat</a>
+</div>
 <section class="download">
     <button class="download">Download for free</button>
 </section>
