--- a/app/src/scss/downloads.scss
+++ b/app/src/scss/downloads.scss
@@ -1,24 +1,13 @@
-$accent: #d14040;
+@import "variables";
 
 .release {
     color: $accent !important;
 }
 
-#warnings > div {
-    text-align: center;
-    position: absolute;
-    overflow: auto;
-    color: white;
-    background-color: #a88e16;
-    border: .5px solid silver;
-    border-radius: 10px;
-    width: 100%;
-
-    .close {
-        float: right;
-        font-size: 2em;
-        &:hover {
-            color: $accent;
-        }
+div.download {
+    display: flex;
+    flex-direction: row;
+    button {
+        margin: 5px;
     }
 }
