--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -14,3 +14,10 @@
 />
 <link rel="stylesheet" href="/css/icons.css" />
 <link rel="stylesheet" href="/css/main.css" />
+<% css.forEach(href => { %>
+<link rel="stylesheet" href="<%= href %>" />
+<% }) %>
+<script
+    src="https://kit.fontawesome.com/85099a76d6.js"
+    crossorigin="anonymous"
+></script>
