--- a/app/src/scss/forms.scss
+++ b/app/src/scss/forms.scss
@@ -51,3 +51,9 @@ input[type="submit"] {
 ::-webkit-calendar-picker-indicator {
     filter: invert(1);
 }
+
+.error {
+    background-color: red;
+    padding: 10px;
+    margin: 10px;
+}
