--- a/app/src/scss/about.scss
+++ b/app/src/scss/about.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "animation";
+@import 'variables';
+@import 'animation';
 .about {
     background-color: #6f9fec;
     width: 90%;
