--- a/app/views/pages/downloads.html
+++ b/app/views/pages/downloads.html
@@ -1,7 +1,7 @@
 <div id="warnings">
     <div>
-        ISO is not ready right now. <br />You can download the Arch ISO and
-        install utilities using <a href="#">this manual</a>
+        ISO is not ready right now. <br />You can download the Arch ISO and install utilities using
+        <a href="#">this manual</a>
         <div class="close">X</div>
     </div>
 </div>
