--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -9,9 +9,8 @@
         <div>
             <h2>AI</h2>
             <p>
-                BIQ-Cat OS uses AI to predict your choices, as powerful helper,
-                etc. If you don't want some features, you may just switch them
-                off
+                BIQ-Cat OS uses AI to predict your choices, as powerful helper, etc. If you don't want some features,
+                you may just switch them off
             </p>
         </div>
     </article>
@@ -20,10 +19,8 @@
         <div>
             <h2>All new features from Windows & Linux</h2>
             <p>
-                Have you got a file system with real-time compression or
-                built-in vitual machene? BIQ-Cat OS have both of them! We've
-                included the best features from Windows (like WSA) and Linux
-                (like Flatpak, BTRFS)
+                Have you got a file system with real-time compression or built-in vitual machene? BIQ-Cat OS have both
+                of them! We've included the best features from Windows (like WSA) and Linux (like Flatpak, BTRFS)
             </p>
         </div>
     </article>
@@ -32,9 +29,8 @@
         <div>
             <h2>Applications compatibility</h2>
             <p>
-                All you Android, IOS and Windows applications will work natively
-                on BIQ-Cat OS! Now you can play your favourite computure games
-                on PC without any emulators!
+                All you Android, IOS and Windows applications will work natively on BIQ-Cat OS! Now you can play your
+                favourite computure games on PC without any emulators!
             </p>
         </div>
     </article>
