--- a/app/views/pages/singup.html
+++ b/app/views/pages/singup.html
@@ -1,4 +1,4 @@
-<form action="/api/singup" method="post">
+<form action="/api/users/singup" method="post">
     <fieldset>
         <legend>About yourself</legend>
         <label for="name">Enter your name: </label
