Created template engine

--- a/app/views/pages/singup.html
+++ b/app/views/pages/singup.html
@@ -1,4 +1,4 @@
-<form action="/api/users/singup" method="post">
+<form action="/actions/singup" method="post">
     <fieldset>
         <legend>About yourself</legend>
         <label for="name">Enter your name: </label
@@ -29,4 +29,5 @@
         <label for="phone">Enter phone: </label><input type="tel" name="phone" id="phone" />
     </fieldset>
     <input type="submit" name="register" value="Register" />
+    <a href="/users/login">Already have account?</a>
 </form>
