--- a/app/views/pages/about.html
+++ b/app/views/pages/about.html
@@ -19,7 +19,7 @@
     </li>
     <li class="github">
         <img src="/img/github-mark-white.svg" alt="GitHub" />
-        GitHub
+        <a href="https://github.com/maximum-zar/biq-cat_os" target="_blank">GitHub</a>
     </li>
     <li class="google">
         <i class="fa-brands fa-google">G</i>
