--- a/app/views/pages/downloads.html
+++ b/app/views/pages/downloads.html
@@ -11,7 +11,7 @@
         <span class="release" data-branch="stable">unknown</span>
     </h1>
     <div class="download">
-        <button class="download">Download ISO</button>
-        <button class="download">BitTorrent</button>
+        <a href="https://mirror.yandex.ru/archlinux/iso/2023.03.01/"><button class="download">Download ISO</button></a>
+        <a href="magnet:?xt=urn:btih:6ebb0596f16e8dca6635921c5e125f293e4cecad&dn=archlinux-2023.03.01-x86_64.iso"><button class="download">BitTorrent</button></a>
     </div>
 </div>
